@@ -87,11 +87,11 @@ hocr_image_processing (const ho_pixbuf * pix_in,
 
     /* if fonts are too small, re-scale image */
     if (bitmap_temp->font_height < 10)
-      scale_by = 8;
-    else if (bitmap_temp->font_height < 25)
       scale_by = 4;
-    else
+    else if (bitmap_temp->font_height < 25)
       scale_by = 2;
+    else
+      scale_by = 1;
 
     if (scale_by > 1)
     {
